# HPC

Histograms using CUDA/: CMakeLists.txt  README.md  gen_hist_inputs.py
Histograms using CUDA/src/: hist_coal.cu  hist_private.cu
MPI bmp generation/: CMakeLists.txt  README.md
MPI bmp generation/bitmap/: bitmap.c  bitmap.h
MPI bmp generation/c/: README.md  mpi_advec_driver.c  mpi_advec_driver.h  mpi_advec_main.c  serial_advec_driver.c  serial_advec_driver.h  serial_advec_main.c  simple_mat.c  simple_mat.h
MPI bmp generation/cpp/: README.md  get_mpi_types.hpp  mpi_advec_driver.hpp  mpi_advec_main.cpp  serial_advec_driver.hpp  serial_advec_main.cpp  simple_mat.hpp
MatrixVector Multiplication/: .gitignore  CMakeLists.txt
MatrixVector Multiplication/problem1/: CMakeLists.txt
MatrixVector Multiplication/problem1/include/: matvec_mul.h
MatrixVector Multiplication/problem1/src/: matvec_mul.c  mul_bench.c  mul_test.c
MatrixVector Multiplication/problem2/: CMakeLists.txt
MatrixVector Multiplication/problem2/src/: bitmap_demo.c  particle_aos.c  particle_soa.c
OpenMP Parallelization/: .gitignore
OpenMP Parallelization/problem2/: CMakeLists.txt
OpenMP Parallelization/problem2/src/: particle_soa.c
OpenMP Parallelization/problem3/: CMakeLists.txt
OpenMP Parallelization/problem3/src/: bitmap.c  mandle.c
Raytracing Demo/: CMakeLists.txt  README.md
Raytracing Demo/src/: raytracingArray.c  raytracingStruct.c
Raytracing Using CUDA/: CMakeLists.txt  README.md
Raytracing Using CUDA/include/: bitmap.h  helper_cuda.h  helper_string.h
Raytracing Using CUDA/src/: bitmap.cu  rayTracing.cu
SPMV using CUDA/: CMakeLists.txt  README.md  gen_sparse_data.py
SPMV using CUDA/src/: spmv_cpu.c  spmv_gpu.cu
Static vs Dynamic MPI/: CMakeLists.txt  README.md
Static vs Dynamic MPI/src/: julia_dynamic.c  julia_serial.c  julia_static.c
